[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/BattleInterface.gd" type="Script" id=1]

[node name="BattleInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -1.3017
margin_right = 958.698
margin_bottom = 540.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 506.0
margin_right = 959.0
margin_bottom = 540.0
rect_min_size = Vector2( 0, 10 )
custom_constants/margin_right = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 4.0
margin_right = 955.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moves" type="PanelContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )

[node name="MovesContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/Moves"]
margin_left = 7.0
margin_top = 7.0
margin_right = 143.0
margin_bottom = 23.0

[node name="Targets" type="PanelContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )

[node name="TargetsContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/Targets"]
margin_left = 7.0
margin_top = 7.0
margin_right = 143.0
margin_bottom = 23.0

[node name="Description" type="PanelContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 951.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3

[node name="DescriptionContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/Description"]
margin_left = 7.0
margin_top = 7.0
margin_right = 636.0
margin_bottom = 23.0

[node name="DescriptionText" type="RichTextLabel" parent="VBoxContainer/MarginContainer/HBoxContainer/Description/DescriptionContainer"]
margin_right = 629.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 16 )
bbcode_enabled = true
bbcode_text = "Hello"
text = "Hello"
__meta__ = {
"_edit_use_anchors_": false
}
